Updated CLI switched, refactored, and updated Readme

--- a/txt_ferret/_default.yaml
+++ b/txt_ferret/_default.yaml
@@ -1,4 +1,10 @@
 
+settings:
+  tokenize: Yes
+  log_level: INFO
+  summarize: No
+  output_file:
+
 filters:
   - label: american_express_15_ccn
     type: Credit Card Number
@@ -35,7 +41,3 @@ filters:
     tokenize:
       mask: XXXXXXXX
       index: 2
-settings:
-  tokenize: Yes
-  log_level: INFO
-  summarize: No
