Changed default masks to cover all but vendor-specific initial integers

--- a/txt_ferret/_default.yaml
+++ b/txt_ferret/_default.yaml
@@ -11,33 +11,33 @@ filters:
     sanity: luhn
     pattern: '((34|37)\d{2}[\W_]?\d{6}[\W_]?\d{5})'
     tokenize:
-      mask: XXXXXXXX
+      mask: XXXXXXXXXXXXX
       index: 2,
   - label: visa_16_ccn
     type: Credit Card Number
     sanity: luhn
     pattern: '(4\d{3}[\W_]?\d{4}[\W_]?\d{4}[\W_]?\d{4})'
     tokenize:
-      mask: XXXXXXXXXXX
+      mask: XXXXXXXXXXXXXXX
       index: 1
   - label: master_card_16_ccn
     type: Credit Card Number
     sanity: luhn
     pattern: '(5[1-5]\d{2}[\W_]?\d{4}[\W_]?\d{4}[\W_]?\d{4})'
     tokenize:
-      mask: XXXXXXXXXX
+      mask: XXXXXXXXXXXXXX
       index: 2
   - label: discover_16_ccn
     type: Credit Card Number
     sanity: luhn
     pattern: '(6011[\W_]?\d{4}[\W_]?\d{4}[\W_]?\d{4})'
     tokenize:
-      mask: XXXXXXXX
+      mask: XXXXXXXXXXXX
       index: 4
   - label: diners_carte_14_ccn
     type: Credit Card Number
     sanity: luhn
     pattern: '((30[0-5]\d|3[68]\d{2})[\W_]?\d{6}[\W_]?\d{4})'
     tokenize:
-      mask: XXXXXXXX
+      mask: XXXXXXXXXXXX
       index: 2
