--- a/txt_ferret/_default.yaml
+++ b/txt_ferret/_default.yaml
@@ -13,7 +13,7 @@ filters:
     pattern: '((?:34|37)\d{2}[\W_]?\d{6}[\W_]?\d{5})'
     tokenize:
       mask: XXXXXXXXXXXXX
-      index: 2,
+      index: 2
   - label: visa_16_ccn
     type: Credit Card Number
     sanity: luhn
