Refactored a bit and fixed some delimiter bugs.

--- a/txt_ferret/_default.yaml
+++ b/txt_ferret/_default.yaml
@@ -5,7 +5,7 @@ settings:
   summarize: No
   output_file:
   show_matches: Yes
-  delimeter:
+  delimiter:
 
 filters:
   - label: american_express_15_ccn
