Made changes to default regex CCN filters. Added file output. Changed log text. Changed log format.

--- a/txt_ferret/_default.yaml
+++ b/txt_ferret/_default.yaml
@@ -8,38 +8,38 @@ settings:
   delimiter:
 
 filters:
-  - label: american_express_15_ccn
+  - label: american_express_15_ccn_greedy
     type: Credit Card Number
     sanity: luhn
-    pattern: '((?:34|37)\d{2}[\W_]?\d{6}[\W_]?\d{5})'
+    pattern: '((?:34|37)\d{2}(?:(?:[\W_]\d{6}[\W_]\d{5})|\d{11}))'
     tokenize:
       mask: XXXXXXXXXXXXX
       index: 2
-  - label: visa_16_ccn
+  - label: visa_16_ccn_greedy
     type: Credit Card Number
     sanity: luhn
-    pattern: '(4\d{3}[\W_]?\d{4}[\W_]?\d{4}[\W_]?\d{4})'
+    pattern: '(4\d{3}(?:(?:[\W_]\d{4}){3}|\d{12}))'
     tokenize:
       mask: XXXXXXXXXXXXXXX
       index: 1
-  - label: master_card_16_ccn
+  - label: master_card_16_ccn_greedy
     type: Credit Card Number
     sanity: luhn
-    pattern: '(5[1-5]\d{2}[\W_]?\d{4}[\W_]?\d{4}[\W_]?\d{4})'
+    pattern: '(5[1-5]\d{2}(?:(?:[\W_]\d{4}){3}|\d{12}))'
     tokenize:
       mask: XXXXXXXXXXXXXX
       index: 2
   - label: discover_16_ccn
     type: Credit Card Number
     sanity: luhn
-    pattern: '(6011[\W_]?\d{4}[\W_]?\d{4}[\W_]?\d{4})'
+    pattern: '(6011(?:(?:[\W_]\d{4}){3}|\d{12}))'
     tokenize:
       mask: XXXXXXXXXXXX
       index: 4
   - label: diners_carte_14_ccn
     type: Credit Card Number
     sanity: luhn
-    pattern: '((?:30[0-5]\d|3[68]\d{2})[\W_]?\d{6}[\W_]?\d{4})'
+    pattern: '((?:30[0-5]\d|3[68]\d{2})(?:(?:[\W_]\d{6}[\W_]\d{4})|\d{10}))'
     tokenize:
       mask: XXXXXXXXXXXX
       index: 2
