--- a/txt_ferret/_default.yaml
+++ b/txt_ferret/_default.yaml
@@ -8,21 +8,21 @@ settings:
   delimiter:
 
 filters:
-  - label: american_express_15_ccn_greedy
+  - label: american_express_15_ccn
     type: Credit Card Number
     sanity: luhn
     pattern: '((?:34|37)\d{2}(?:(?:[\W_]\d{6}[\W_]\d{5})|\d{11}))'
     tokenize:
       mask: XXXXXXXXXXXXX
       index: 2
-  - label: visa_16_ccn_greedy
+  - label: visa_16_ccn
     type: Credit Card Number
     sanity: luhn
     pattern: '(4\d{3}(?:(?:[\W_]\d{4}){3}|\d{12}))'
     tokenize:
       mask: XXXXXXXXXXXXXXX
       index: 1
-  - label: master_card_16_ccn_greedy
+  - label: master_card_16_ccn
     type: Credit Card Number
     sanity: luhn
     pattern: '(5[1-5]\d{2}(?:(?:[\W_]\d{4}){3}|\d{12}))'
