--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,44 @@
 ansimarkup==1.4.0
 appdirs==1.4.3
+astroid==2.2.5
+atomicwrites==1.3.0
 attrs==19.1.0
 better-exceptions-fork==0.2.1.post6
 black==19.3b0
+bleach==3.1.0
+boto3==1.9.162
+botocore==1.12.162
+certifi==2019.3.9
+chardet==3.0.4
 Click==7.0
 colorama==0.4.1
+docutils==0.14
+idna==2.8
+isort==4.3.20
+jmespath==0.9.4
+lazy-object-proxy==1.4.1
 loguru==0.2.5
+mccabe==0.6.1
+more-itertools==7.0.0
+pkg-resources==0.0.0
+pkginfo==1.5.0.1
+pluggy==0.11.0
+py==1.8.0
 Pygments==2.3.1
+pylint==2.3.1
+pytest==4.5.0
+python-dateutil==2.8.0
 PyYAML==5.1
+readme-renderer==24.0
+requests==2.22.0
+requests-toolbelt==0.9.1
+s3transfer==0.2.1
+six==1.12.0
 toml==0.10.0
+tqdm==4.32.1
+twine==1.13.0
+typed-ast==1.4.0
+urllib3==1.25.3
+wcwidth==0.1.7
+webencodings==0.5.1
+wrapt==1.11.1
