--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ appdirs==1.4.3
 astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
+bandit==1.6.2
 better-exceptions-fork==0.2.1.post6
 black==19.3b0
 bleach==3.1.0
@@ -12,9 +13,12 @@ certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 colorama==0.4.1
+coverage==4.5.4
 docutils==0.14
 entrypoints==0.3
 flake8==3.7.8
+gitdb2==2.0.5
+GitPython==2.1.13
 idna==2.8
 isort==4.3.20
 jmespath==0.9.4
@@ -22,6 +26,7 @@ lazy-object-proxy==1.4.1
 loguru==0.2.5
 mccabe==0.6.1
 more-itertools==7.0.0
+pbr==5.4.2
 pkginfo==1.5.0.1
 pluggy==0.11.0
 py==1.8.0
@@ -37,6 +42,8 @@ requests==2.22.0
 requests-toolbelt==0.9.1
 s3transfer==0.2.1
 six==1.12.0
+smmap2==2.0.5
+stevedore==1.30.1
 toml==0.10.0
 tqdm==4.32.1
 twine==1.13.0
